--- a/styles.css
+++ b/styles.css
@@ -49,11 +49,20 @@ tr {
 td {
     width: 20px;
 }
+/* clearfix */
+.clrfx{
+    overflow: auto;
+}
+.clrfx::after{
+    content: "";
+    clear: both;
+    display: table;
+}
 
 input[type=number] {
     width: 100%;
     padding-left: 20px;
-    border: none;
+    border: 1px solid #ccc;;
     background-color: #fff;
 }
 
@@ -78,13 +87,14 @@ input[type="color"] {
     display: block;
     width: auto;
     padding: 5px;
-    border: 1px solid #eee;
+    
+    margin-bottom: 10px;
     
 }
-
+/* 
 .tools:nth-child(odd) {
     border-bottom: none;
-}
+} */
 
 header {
     border-bottom: 1px solid #eee;
@@ -111,14 +121,16 @@ aside {
 }
 
 .toolbox {
-    margin-bottom: 25px;
+    margin-bottom: 15px;
+    border: 1px solid rgb(245, 245, 245);
+    padding: 5px;
 }
 
 
 .toolInputLabel {
-    position: absolute;
+    /* position: absolute;
     left: 5px;
-    top: 6px;
+    top: 6px; */
     color: #888;
 }
 
@@ -127,6 +139,7 @@ aside {
     display: block;
     text-align: left;
     font-weight: bold;
+    color: #ccc;
 }
 
 
@@ -149,9 +162,37 @@ button.btn:active{
     background-color: #ddd;
 }
 /* tool box */
+.range-colors{
+    margin-bottom: 5px;
+}
 input.range-slider-value{
 display: inline;
 width: 30px;
+}
+
+.range-slider-range{
+    width: 100px;
+    vertical-align: middle;
+}
+
+
+span.btn{
+    cursor: pointer;
+    margin: 5px 15px;
+}
+
+/* input set styles */
+.inputSet{
+    width: 50px;
+    text-align: center;
+    float: left;
+    margin-right: 5px;
+}
+
+.inputSet input{
+    float:left;
+    width: 100%;
+    height: 20px;
 }
 
 input.range-slider-value-hex{
